重构页面，绘制TUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(include)
 # 查找 nlohmann_json 包
 # set(CMAKE_PREFIX_PATH "/opt/homebrew/Cellar/nlohmann-json/3.11.3")
 find_package(nlohmann_json REQUIRED)
+find_package(ftxui CONFIG REQUIRED)
 # message(STATUS "Nlohmann JSON include dir: ${nlohmann_json_INCLUDE_DIRS}")
 
 # 添加源文件
@@ -22,4 +23,9 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 add_executable(JWS ${SOURCES} main.cpp)
 
 # 链接 nlohmann_json 库
-target_link_libraries(JWS PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(JWS PRIVATE nlohmann_json::nlohmann_json )
+target_link_libraries(JWS PRIVATE
+    ftxui::screen
+    ftxui::dom
+    ftxui::component
+)    
