--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # 包含头文件目录
 include_directories(include)
 
-# 查找 nlohmann_json 包
-# set(CMAKE_PREFIX_PATH "/opt/homebrew/Cellar/nlohmann-json/3.11.3")
+# 查找 包
+# 独立的指令
 find_package(nlohmann_json REQUIRED)
 find_package(ftxui CONFIG REQUIRED)
-# message(STATUS "Nlohmann JSON include dir: ${nlohmann_json_INCLUDE_DIRS}")
 
 # 添加源文件
 file(GLOB_RECURSE SOURCES "src/*.cpp")
@@ -22,10 +21,10 @@ file(GLOB_RECURSE SOURCES "src/*.cpp")
 # 生成可执行文件
 add_executable(JWS ${SOURCES} main.cpp)
 
-# 链接 nlohmann_json 库
-target_link_libraries(JWS PRIVATE nlohmann_json::nlohmann_json )
-target_link_libraries(JWS PRIVATE
-    ftxui::screen
-    ftxui::dom
+# 链接库
+target_link_libraries(JWS PRIVATE 
+    nlohmann_json::nlohmann_json 
+    ftxui::screen 
+    ftxui::dom 
     ftxui::component
-)    
+)
